[tool.poetry]
name = "qcanvas"
version = "1.1.0"
description = "QCanvas is a desktop client for Canvas LMS."
authors = ["QCanvas <QCanvas@noreply.codeberg.org>"]
readme = "README.md"
exclude = [
    "images",
    "flatpak",
    "appimage",
    "windows",
]

[tool.poetry.scripts]
qcanvas = "qcanvas.run:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
qcanvas-api-clients = "^0.3.0"
qcanvas-backend = "^0.2.0"
asynctaskpool = "^0.2.1"
sqlalchemy = "^2.0.31"
qtpy = "^2.4.1"
aiosqlite = "^0.20.0"
pyqtdarktheme-fork = "^2.3.2"
qasync = "^0.27.1"
lightdb = "^2.0"
platformdirs = "^4.2.2"
validators = "^0.33.0"

[tool.poetry.group.flatpak-exclude.dependencies]
pyside6-essentials = "^6.7.2"
#2024-07-18: Latest version causes error with pyinstaller
setuptools = "70.3.0"
pyinstaller = "^6.9.0"

[tool.poetry.group.nuitka]
optional = true

[tool.poetry.group.nuitka.dependencies]
pyside6-essentials = "^6.7.2"
nuitka = "^2.4.5"

[tool.poetry.group.local-deps]
optional = true

[tool.poetry.group.local-deps.dependencies]
#qcanvas-api-clients = { path = "../QCanvas-API-Clients/", develop = true }
#qcanvas-backend = { path = "../QCanvas-Backend/", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"