[tool.poetry]
name = "qcanvas"
version = "2.0.2"
description = "QCanvas is a desktop client for Canvas LMS."
authors = ["QCanvas <QCanvas@noreply.codeberg.org>"]
readme = "README.md"
exclude = [
    "images",
    "deploy",
    "qcanvas/icons/*/*/*.svg",
    "qcanvas/icons/_update_icons.py",
]

[tool.poetry.scripts]
qcanvas = "qcanvas:main"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
libqcanvas = "^0.5.4"
#libqcanvas = { path = "../libqcanvas/", develop = true }
#libqcanvas-clients = { path = "../libqcanvas_clients/", develop = true }
asynctaskpool = "^0.2.1"
sqlalchemy = "^2.0.31"
aiosqlite = "^0.20.0"
pyqtdarktheme-fork = "^2.3.2"
qasync = "^0.27.1"
platformdirs = "^4.2.2"
validators = "^0.34.0"
cachetools = "^5.5.0"
aiofile = "^3.9.0"

[tool.poetry.group.flatpak-exclude.dependencies]
pyside6-essentials = "^6.8.0"
shiboken6 = "6.8.1" # pinned because latest release is ONLY a macos version for some reason
setuptools = "^71.1.0"
pyinstaller = "^6.10.0"

[tool.poetry.group.dev-tools]
optional = true

[tool.poetry.group.dev-tools.dependencies]
#nuitka = "^2.4.5"
rich = "^13.7.1"
pre-commit = "^4.0.1"
xmltodict = "^0.13.0"
mako = "^1.3.8"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["libqcanvas_clients", "asynctaskpool", "libqcanvas"]